[gd_scene load_steps=6 format=3 uid="uid://b4woicggddkls"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/menu/menu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dj3ts0dee4m6" path="res://src/screens/save_states_screen/save_state_entry/save_state_entry.tscn" id="4_5irse"]
[ext_resource type="PackedScene" uid="uid://chc845g8trbih" path="res://src/ui_components/buttons/default_button/default_button.tscn" id="4_8tsyt"]
[ext_resource type="PackedScene" uid="uid://nnebno4d3gx2" path="res://src/screens/loading_screen/loading_screen.tscn" id="4_qla42"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.5
offset_top = -393.5
offset_right = 342.5
offset_bottom = 393.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SaveState" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_5irse")]
unique_name_in_owner = true
layout_mode = 2
hide_buttons = true

[node name="SaveSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueGame" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8tsyt")]
unique_name_in_owner = true
layout_mode = 2
text = "CONTINUE"

[node name="NewGame" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8tsyt")]
unique_name_in_owner = true
layout_mode = 2
text = "NEW_GAME"

[node name="LoadGame" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8tsyt")]
unique_name_in_owner = true
layout_mode = 2
text = "LOAD_GAME"

[node name="Settings" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8tsyt")]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS"

[node name="Exit" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_8tsyt")]
unique_name_in_owner = true
layout_mode = 2
text = "EXIT"

[node name="LoadingScreen" parent="." instance=ExtResource("4_qla42")]
visible = false
layout_mode = 1

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.979
anchor_top = 0.959
anchor_right = 0.979
anchor_bottom = 0.959
offset_left = -284.68
offset_top = -39.7201
offset_right = -0.680054
offset_bottom = 0.279907
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="LinkButton" type="LinkButton" parent="Info"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 4
focus_mode = 2
text = "simondalvai.org"
uri = "https://simondalvai.org"

[node name="Version" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 7
text = "V0.1.22.3"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="loaded" from="LoadingScreen" to="." method="_on_loading_screen_loaded"]
